:bug: fix: Resolve mouseover opacity bug by adding overflow-y and margin to button.css

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,7 +1,8 @@
 .button-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+  overflow-y: auto;
 }
 
 .button {
@@ -14,6 +15,6 @@
   border: 1px solid transparent;
   justify-content: center;
   padding: 10px;
-  margin: 0;
+  margin: 2px 10px;
   width: auto;
 }
